--- a/.ci_support/linux_ppc64le_openssl3.yaml
+++ b/.ci_support/linux_ppc64le_openssl3.yaml
@@ -1,29 +1,29 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '11.0'
 bzip2:
 - '1'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '11'
+- '9'
+cdt_name:
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '11'
+- '9'
+docker_image:
+- quay.io/condaforge/linux-anvil-ppc64le
 libffi:
 - '3.4'
 libuuid:
-- 2.32.1
-macos_machine:
-- arm64-apple-darwin20.0.0
+- '2'
 ncurses:
 - '6.2'
 openssl:
-- 1.1.1
+- '3'
 pin_run_as_build:
   bzip2:
     max_pin: x
@@ -40,8 +40,6 @@ pin_run_as_build:
     max_pin: x
   sqlite:
     max_pin: x
-  tk:
-    max_pin: x.x
   xz:
     max_pin: x.x
   zlib:
@@ -53,9 +51,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- osx-arm64
-tk:
-- '8.6'
+- linux-ppc64le
 xz:
 - '5.2'
 zip_keys:
