--- a/.ci_support/osx_arm64_openssl1.1.1.yaml
+++ b/.ci_support/osx_arm64_openssl1.1.1.yaml
@@ -1,25 +1,23 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '11.0'
 bzip2:
 - '1'
 c_compiler:
-- gcc
+- clang
 c_compiler_version:
-- '9'
-cdt_name:
-- cos7
+- '11'
 channel_sources:
-- conda-forge,defaults
+- conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- gxx
+- clangxx
 cxx_compiler_version:
-- '9'
-docker_image:
-- quay.io/condaforge/linux-anvil-ppc64le
+- '11'
 libffi:
 - '3.4'
-libuuid:
-- 2.32.1
+macos_machine:
+- arm64-apple-darwin20.0.0
 ncurses:
 - '6.2'
 openssl:
@@ -29,8 +27,6 @@ pin_run_as_build:
     max_pin: x
   libffi:
     max_pin: x.x
-  libuuid:
-    max_pin: x
   ncurses:
     max_pin: x.x
   python:
@@ -40,6 +36,8 @@ pin_run_as_build:
     max_pin: x
   sqlite:
     max_pin: x
+  tk:
+    max_pin: x.x
   xz:
     max_pin: x.x
   zlib:
@@ -51,7 +49,9 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-ppc64le
+- osx-arm64
+tk:
+- '8.6'
 xz:
 - '5.2'
 zip_keys:
