--- a/.ci_support/win_64_openssl1.1.1.yaml
+++ b/.ci_support/win_64_openssl1.1.1.yaml
@@ -1,29 +1,15 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
-MACOSX_SDK_VERSION:
-- '11.0'
 bzip2:
 - '1'
 c_compiler:
-- clang
-c_compiler_version:
-- '11'
+- vs2017
 channel_sources:
-- conda-forge,defaults
+- conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- clangxx
-cxx_compiler_version:
-- '11'
+- vs2017
 libffi:
 - '3.4'
-libuuid:
-- 2.32.1
-macos_machine:
-- x86_64-apple-darwin13.4.0
-ncurses:
-- '6.2'
 openssl:
 - 1.1.1
 pin_run_as_build:
@@ -31,15 +17,9 @@ pin_run_as_build:
     max_pin: x
   libffi:
     max_pin: x.x
-  libuuid:
-    max_pin: x
-  ncurses:
-    max_pin: x.x
   python:
     min_pin: x.x
     max_pin: x.x
-  readline:
-    max_pin: x
   sqlite:
     max_pin: x
   tk:
@@ -50,18 +30,13 @@ pin_run_as_build:
     max_pin: x.x
 python:
 - '3.10'
-readline:
-- '8'
 sqlite:
 - '3'
 target_platform:
-- osx-64
+- win-64
 tk:
 - '8.6'
 xz:
 - '5.2'
-zip_keys:
-- - c_compiler_version
-  - cxx_compiler_version
 zlib:
 - '1.2'
