--- a/.ci_support/win_64_openssl3.yaml
+++ b/.ci_support/win_64_openssl3.yaml
@@ -3,7 +3,7 @@ bzip2:
 c_compiler:
 - vs2017
 channel_sources:
-- conda-forge,defaults
+- conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
@@ -11,7 +11,7 @@ cxx_compiler:
 libffi:
 - '3.4'
 openssl:
-- 1.1.1
+- '3'
 pin_run_as_build:
   bzip2:
     max_pin: x
@@ -26,6 +26,8 @@ pin_run_as_build:
     max_pin: x.x
   xz:
     max_pin: x.x
+  zlib:
+    max_pin: x.x
 python:
 - '3.10'
 sqlite:
@@ -36,3 +38,5 @@ tk:
 - '8.6'
 xz:
 - '5.2'
+zlib:
+- '1.2'
