--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,14 +1,10 @@
 python:
-  - 3.9
+  - 3.10
 python_impl:
   - cpython
+libffi:  # [win]
+  - 3.4  # [win] 
 numpy:
   - 1.16
-c_compiler:                    # [win]
-  - vs2017                     # [win]
-cxx_compiler:                  # [win]
-  - vs2017                     # [win]
-vc:                            # [win]
-  - 14                         # [win]
 MACOSX_SDK_VERSION:            # [osx and x86_64]
   - 11.0                       # [osx and x86_64]
