depend on libnsl

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -74,7 +74,7 @@ source:
     sha256: de3c87b26a80e789986d8e6950c6304175d3829afe9c6c7211eb7257266ab0ac         # [win]
 
 build:
-  number: 102
+  number: 103
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
@@ -137,6 +137,7 @@ requirements:
     - tk  # [not win]
     - ncurses  # [not win]
     - libffi  # [not win]
+    - libnsl  # [linux]
     - ld_impl_{{ target_platform }} >=2.34  # [linux]
   run:
     - ld_impl_{{ target_platform }} >=2.34  # [linux]
