--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,6 +45,7 @@ source:
 {% endif %}
       - patches/0020-Use-ranlib-from-env-if-env-variable-is-set.patch
       - patches/0021-Set-ssltag-to-3.patch  # [openssl != '1.1.1']
+      - patches/0022-Openssl3-load-verify-error.patch
   # TODO :: Depend on our own packages for these:
   - url: https://github.com/python/cpython-source-deps/archive/xz-5.2.2.zip          # [win]
     folder: externals/xz-5.2.2                                                       # [win]
