--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -4,7 +4,7 @@
 {% set ver2 = '.'.join(version.split('.')[0:2]) %}
 {% set ver2nd = ''.join(version.split('.')[0:2]) %}
 {% set ver3nd = ''.join(version.split('.')[0:3]) %}
-{% set build_number = 1 %}
+{% set build_number = 2 %}
 {% set channel_targets = ('abc', 'def')  %}
 
 # this makes the linter happy
@@ -210,7 +210,7 @@ outputs:
 {% endif %}
       requires:
         - ripgrep
-        - cmake  # [not (linux and ppc64le)]
+        - cmake
         - make  # [unix]
         - ninja
         - {{ compiler('c') }}
@@ -272,6 +272,9 @@ outputs:
         - popd
         - python run_test.py
         - test ! -f default.profraw   # [osx]
+        # Test workaround for https://github.com/conda/conda/issues/10969
+        - test -d "$PREFIX/lib/python3.1/site-packages"  # [unix]
+        - python3.1 --version  # [unix]
 
   - name: libpython-static
     script: build_static.sh  # [unix]
