--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -302,11 +302,13 @@ outputs:
         - {{ pin_subpackage('python', exact=True) }}
     test:
       commands:
+        - pushd tests
+        - pushd prefix-replacement    # [unix]
         - test -f ${PREFIX}/lib/libpython${PKG_VERSION%.*}.a  # [unix]
         - test -f ${PREFIX}/lib/libpython${PKG_VERSION%.*}.nolto.a  # [unix]
         - test -f ${PREFIX}/lib/python${PKG_VERSION%.*}/config-${PKG_VERSION%.*}-darwin/libpython${PKG_VERSION%.*}.a  # [osx]
-        - pushd prefix-replacement    # [unix]
         - bash build-and-test.sh      # [unix]
+        - popd    # [unix]
         - popd    # [unix]
 
 about:
