disable static library on aarch64

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -276,6 +276,7 @@ outputs:
         - test -d "$PREFIX/lib/python3.1/site-packages"  # [unix]
         - python3.1 --version  # [unix]
 
+{% if target_platform != "linux-aarch64" %}
   - name: libpython-static
     script: build_static.sh  # [unix]
     script: build_static.bat  # [win]
@@ -317,6 +318,7 @@ outputs:
         - bash build-and-test.sh      # [unix]
         - popd    # [unix]
         - popd    # [unix]
+{% endif %}
 
 about:
   home: https://www.python.org/
