--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -258,6 +258,8 @@ outputs:
         # Test workaround for https://github.com/conda/conda/issues/10969
         - test -d "$PREFIX/lib/python3.1/site-packages"  # [unix]
         - python3.1 --version  # [unix]
+        # Test for segfault on osx-64 with libffi=3.4, see https://bugs.python.org/issue44556
+        - python -c "from ctypes import CFUNCTYPE; CFUNCTYPE(None)(id)"
 
   - name: libpython-static
     script: build_static.sh  # [unix]
