Add segfault test on osx-64+libffi=3.4 (bpo-44556)
refs:
  - https://bugs.python.org/issue44556
  - https://github.com/conda-forge/python-feedstock/issues/522
  - https://github.com/conda-forge/llvmlite-feedstock/pull/58#issuecomment-973829079

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -258,6 +258,8 @@ outputs:
         - popd
         - python run_test.py
         - test ! -f default.profraw   # [osx]
+        # Test for segfault on osx-64 with libffi=3.4, see https://bugs.python.org/issue44556
+        - python -c "from ctypes import CFUNCTYPE; CFUNCTYPE(None)(id)"
 
   - name: libpython-static
     script: build_static.sh  # [unix]
