--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -124,6 +124,7 @@ requirements:
     - tk                                 # [unix]
     - ncurses                            # [unix]
     - libffi                             # [unix]
+    - libnsl                             # [linux]
     - ld_impl_{{ target_platform }} >=2.34     # [linux]
   run:
     - ncurses                            # [unix]
