--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
-{% set version = "3.10.1" %}
-{% set dev = "" %}
+{% set version = "3.11.0" %}
+{% set dev = "a3" %}
 {% set dev_ = "" %}
 {% set ver2 = '.'.join(version.split('.')[0:2]) %}
 {% set ver2nd = ''.join(version.split('.')[0:2]) %}
@@ -47,7 +47,7 @@ source:
 {% else %}
   - url: https://www.python.org/ftp/python/{{ version }}/Python-{{ version }}{{ dev }}.tar.xz
     # md5 from: https://www.python.org/downloads/release/python-{{ ver3nd }}/
-    md5: 789210934745a65247a3ebf5da9adb64
+    md5: 7f51bc58150d223c162241d6896204a4
 {% endif %}
     patches:
       - patches/0001-Win32-Change-FD_SETSIZE-from-512-to-2048.patch
@@ -190,8 +190,8 @@ outputs:
     test:
       downstreams:
         # Temporarily disable dowmstream tests on aarch64 as the solver causes timeouts on drone
-        - cython  # [not aarch64]
-        - setuptools  # [not aarch64]
+        #- cython  # [not aarch64]
+        #- setuptools  # [not aarch64]
       requires:
         - ripgrep
         - cmake
