--- a/.ci_support/osx_arm64_openssl3.yaml
+++ b/.ci_support/osx_arm64_openssl3.yaml
@@ -9,7 +9,7 @@ c_compiler_version:
 channel_sources:
 - conda-forge
 channel_targets:
-- conda-forge main
+- conda-forge python_alpha
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
@@ -43,7 +43,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- '3.10'
+- '3.11'
 readline:
 - '8'
 sqlite:
