--- a/.ci_support/win_64_openssl3.yaml
+++ b/.ci_support/win_64_openssl3.yaml
@@ -5,7 +5,7 @@ c_compiler:
 channel_sources:
 - conda-forge
 channel_targets:
-- conda-forge main
+- conda-forge python_alpha
 cxx_compiler:
 - vs2017
 libffi:
@@ -29,7 +29,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- '3.10'
+- '3.11'
 sqlite:
 - '3'
 target_platform:
