--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -4,7 +4,7 @@
 {% set ver2 = '.'.join(version.split('.')[0:2]) %}
 {% set ver2nd = ''.join(version.split('.')[0:2]) %}
 {% set ver3nd = ''.join(version.split('.')[0:3]) %}
-{% set build_number = 1 %}
+{% set build_number = 2 %}
 
 # this makes the linter happy
 {% set channel_targets = channel_targets or 'conda-forge main' %}
@@ -64,7 +64,6 @@ source:
       - patches/0009-Disable-registry-lookup-unless-CONDA_PY_ALLOW_REG_PA.patch
       - patches/0010-Unvendor-openssl.patch
       - patches/0011-Unvendor-sqlite3.patch
-      - patches/0012-venv-Revert-a-change-from-https-github.com-python-cp.patch
       # https://github.com/pypa/distutils/pull/53
       - patches/0013-Use-ranlib-from-env-if-env-variable-is-set.patch
       - patches/0014-Add-CondaEcosystemModifyDllSearchPath.patch
@@ -226,6 +225,8 @@ outputs:
         # tzdata/zoneinfo test that will need the tzdata package to pass
         - python -c "from zoneinfo import ZoneInfo; from datetime import datetime; dt = datetime(2020, 10, 31, 12, tzinfo=ZoneInfo('America/Los_Angeles')); print(dt.tzname())"
         - python -m venv test-venv
+        - test-venv\\Scripts\\python.exe -c "import ctypes"  # [win]
+        - test-venv/bin/python -c "import ctypes"            # [unix]
         - python -c "import sysconfig; print(sysconfig.get_config_var('CC'))"  # [not win]
         - _CONDA_PYTHON_SYSCONFIGDATA_NAME=_sysconfigdata_x86_64_conda_cos6_linux_gnu python -c "import sysconfig; print(sysconfig.get_config_var('CC'))"   # [linux64]
         # check for unreplaced @ symbols in sysconfig files
