--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -4,8 +4,11 @@ provider: {linux_aarch64: default, linux_ppc64le: native}
 test_on_native_only: true
 bot:
   abi_migration_branches:
-    - 3.7
-    - 3.8
-    - 3.9
+  - 3.7
+  - 3.8
+  - 3.9
 azure:
   store_build_artifacts: true
+github:
+  branch_name: main
+  tooling_branch_name: main
