--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -187,8 +187,9 @@ outputs:
     test:
       downstreams:
         # Temporarily disable dowmstream tests on aarch64 as the solver causes timeouts on drone
-        - cython  # [not aarch64]
-        - setuptools  # [not aarch64]
+        # Fully disable while migrating as the automatic skip doesn't work
+        # - cython  # [not aarch64]
+        # - setuptools  # [not aarch64]
       requires:
         - ripgrep
         - cmake
